# content-extraction

./: .gitignore  README.md
java/: README.md  pom.xml
java/apache-pdfbox/: README.md  pom.xml
java/apache-pdfbox/src/main/java/: Main.java
java/apache-tika/: README.md  pom.xml
java/apache-tika/src/main/java/: Main.java
python/: README.md  extract.py  pyproject.toml
